--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,6 @@
       content="Instant, decentralized, privacy-preserving, composable web3 notifications for your service."
     />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link rel="icon" href="data:" />
     <link rel="preload" as="script" href="/index.js" crossorigin />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -31,6 +30,16 @@
     <meta name="application-name" content="Goo" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@goo_tools" />
+    <meta name="twitter:creator" content="@goo_tools" />
+    <meta name="twitter:title" content="Goo" />
+    <meta
+      name="twitter:description"
+      content="Instant, decentralized, privacy-preserving, composable web3 notifications for your service."
+    />
+    <meta name="twitter:image" content="twitterwide.png" />
   </head>
   <body>
     <script type="module" src="/index.js" defer></script>
