--- a/public/index.html
+++ b/public/index.html
@@ -34,12 +34,15 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@goo_tools" />
     <meta name="twitter:creator" content="@goo_tools" />
-    <meta name="twitter:title" content="Goo" />
+    <meta
+      name="twitter:title"
+      content="Goo | Web3 push notifications are almost here"
+    />
     <meta
       name="twitter:description"
       content="Instant, decentralized, privacy-preserving, composable web3 notifications for your service."
     />
-    <meta name="twitter:image" content="twitterwide.png" />
+    <meta name="twitter:image" content="https://goo.tools/twitterwide.png" />
   </head>
   <body>
     <script type="module" src="/index.js" defer></script>
