--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,21 @@
       content="Instant, decentralized, privacy-preserving, composable web3 notifications for your service."
     />
     <meta name="twitter:image" content="https://goo.tools/twitterwide.png" />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-D80XTNT36Q"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-D80XTNT36Q");
+    </script>
   </head>
   <body>
     <script type="module" src="/index.js" defer></script>
